Fixed visibility rule of popup when fading out

--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -1,7 +1,12 @@
 /* Keyframes */
 @keyframes fadeOut {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 /* Popup Styles */
